# apprentice

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apprentice/: __init__.py  config.py  daemon.py  hooks.py
apprentice/analyzer/: historical.py  proactive.py
apprentice/indexer/: base.py  embedder.py  javascript_parser.py  python_parser.py  registry.py
apprentice/interface/: cli.py  output.py
apprentice/llm/: ask.py  client.py  fix.py  summarize.py
apprentice/model/: __init__.py  entities.py  migrations.py  store.py
docs/: competition_audit.md
scripts/: demo.sh
tests/: test_apprentice.py  test_cli_smoke.py  test_self_hosting.py  test_v020.py
