[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apprentice"
version = "0.3.1"
description = "The Programmer's Apprentice — a persistent, proactive coding agent (Rich & Waters 1988)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Apprentice Project" }]
keywords = ["code-intelligence", "coding-agent", "developer-tools", "proactive-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
llm = ["openai>=1.0"]
daemon = ["watchdog>=4.0"]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
apprentice = "apprentice.interface.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apprentice*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
